<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/gradient"
    >



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/start"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="145dp"
        android:textSize="30dp"
        android:background="@drawable/buttonshape"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="See Winner"
        android:id="@+id/winner"
        android:layout_marginTop="530dp"
        android:layout_marginLeft="250dp"
        android:textSize="30dp"
        android:background="@drawable/buttonshape"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fold"
        android:id="@+id/fold"
        android:layout_marginTop="530dp"
        android:layout_marginLeft="200dp"
        android:textSize="30dp"
        android:background="@drawable/buttonshape" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/winner_name"
        android:layout_marginTop="750dp"
        android:textSize="30dp"/>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:id="@+id/plus"
        android:layout_marginTop="470dp"
        android:layout_marginLeft="150dp"
        android:textSize="30dp"
        android:background="@drawable/buttonshape" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call"
        android:id="@+id/call"
        android:layout_marginTop="470dp"
        android:textSize="30dp"
        android:background="@drawable/buttonshape"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_bet"
        android:id="@+id/bet"
        android:layout_marginTop="470dp"
        android:textSize="30dp"
        android:background="@drawable/buttonshape"
        android:layout_marginLeft="360dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check"
        android:id="@+id/check"
        android:textSize="30dp"
        android:background="@drawable/buttonshape"
        android:layout_marginTop="470dp"
        android:layout_centerHorizontal="true"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@integer/pot"
        android:id="@+id/pot"
        android:textSize="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="95dp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/to_call"
        android:textSize="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="155dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/player_cards"
        android:textSize="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/player_one_card_one"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="350dp"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/player_one_card_two"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="350dp"
        android:onClick="onCheckboxClicked"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/player_bet"
        android:textSize="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="125dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/player_chips"
        android:layout_marginLeft="5dp"
        android:textSize="30dp"
        android:layout_marginTop="65dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/player_name"
        android:textSize="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/community_cards"
        android:textSize="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"/>


</RelativeLayout>